# Fcoin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fcoin.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROFILE_SCHEMA.md
examples/: owned-lab-card.profile.json
src/fcoin/: __init__.py  __main__.py  access.py  acquisition.py  analysis.py  cli.py  compare.py  dump.py  errors.py  formats.py  geometry.py  intelligence.py  interactive.py  journal.py  plans.py  profiles.py  reporting.py  status.py  storage.py  transactions.py  ui.py  value.py
tests/: __init__.py  helpers.py  test_access.py  test_analysis_compare.py  test_cli.py  test_formats.py  test_geometry.py  test_plans_transactions.py  test_profiles.py  test_status.py  test_storage_journal.py  test_value.py
